# service-nexus

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
assets/: docs.html  routes.txt
public/: index.html  routes.txt
src/: helpers.rs  main.rs
src/bot/: commands.rs  mod.rs
src/web/: mod.rs
src/web/bustimetravel/: mod.rs
src/web/cats/: controller.rs  mod.rs  model.rs  names.rs  rarities.rs
src/web/jp2/: images.rs  mod.rs  quotes.rs
src/web/jp2/helpers/: general.rs  mod.rs  utoipa_ext.rs
src/web/tf2sc/: auth.rs  controller.rs  error.rs  example.json  mod.rs  model.rs  schema.sql  todos.md
src/web/timetable/: controller.rs  mod.rs  parsing.rs  weekday.rs
tests/: tf2sc.http
