[package]
name = "service-nexus"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
shuttle-serenity = "0.45.0"
axum = "0.7.5"
shuttle-axum = "0.45.0"
shuttle-runtime = "0.45.0"
tracing = "0.1.37"
tokio = { version = "1.26.0", features = ["full"] }
async-trait = "0.1.81"
serde = { version = "1.0", features = ["derive"] }
mongodb = "3.0.1"
reqwest = { version = "0.12.5", features = ["json"] }
thiserror = "1.0.63"
serde_json = "1.0.125"
chrono = "0.4.38"
fake = "2.9.2"
rand = "0.8.5"
