[package]
name = "service-nexus"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
shuttle-serenity = "0.45.0"
axum = { version = "0.7.5", features = ["macros"] }
shuttle-axum = "0.45.0"
shuttle-runtime = "0.45.0"
tracing = "0.1.37"
tokio = { version = "1.26.0", features = ["full"] }
async-trait = "0.1.81"
serde = { version = "1.0", features = ["derive"] }
mongodb = "3.0.1"
reqwest = { version = "0.12.5", features = ["json"] }
thiserror = "1.0.63"
serde_json = "1.0.125"
chrono = "0.4.38"
fake = "2.9.2"
rand = "0.8.5"
regex = "1.10.6"
percent-encoding = "2.3.1"
scraper = "0.20.0"
sqlx = { version = "0.8.0", features = ["postgres", "migrate", "runtime-tokio-native-tls", "chrono", "uuid"] }
utoipa = "4.2.3"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
dotenvy = "0.15.7"
strum = "0.23"
strum_macros = "0.23"
